--- a/启动指南.md
+++ b/启动指南.md
@@ -1,155 +1,114 @@
-# RAG 知识库系统 - 启动指南
+<div align="center">
 
-## 📋 系统架构
+# 🚀 RAG 知识库系统 - 启动指南
 
-```
-┌─────────────────────────────────────────────────────────────┐
-│                        前端服务                              │
-│                   Vue 3 + Vite (5173)                       │
-└─────────────────────────────────────────────────────────────┘
-                            ↓
-┌─────────────────────────────────────────────────────────────┐
-│                      Go 后端服务 (8080)                      │
-│              Gin + GORM + JWT + gRPC Client                 │
-└─────────────────────────────────────────────────────────────┘
-                            ↓
-┌─────────────────────────────────────────────────────────────┐
-│                   Python AI 服务 (50051)                     │
-│           LlamaIndex + gRPC Server + OpenAI API             │
-└─────────────────────────────────────────────────────────────┘
-                            ↓
-┌─────────────────────────────────────────────────────────────┐
-│                      基础设施服务                            │
-│  PostgreSQL | Redis | Kafka | MinIO | Qdrant               │
-└─────────────────────────────────────────────────────────────┘
-```
+**两种启动方式，满足不同场景需求**
 
-## 🚀 快速启动
+</div>
 
-### 步骤 1：启动基础设施（Docker）
+---
 
-```bash
-cd /Users/liang/projectljx/ragljx
+## 📋 目录
 
-# 启动所有基础设施服务
-docker-compose -f docker-compose.infra.yml up -d
+- [方式一：Docker 全容器启动](#-方式一docker-全容器启动推荐)
+- [方式二：本地开发启动](#-方式二本地开发启动)
+- [访问系统](#-访问系统)
+- [故障排查](#-故障排查)
 
-# 查看服务状态
-docker-compose -f docker-compose.infra.yml ps
+---
 
-# 查看日志
-docker-compose -f docker-compose.infra.yml logs -f
-```
+## 🐳 方式一：Docker 全容器启动（推荐）
 
-**基础设施服务列表**：
-- ✅ PostgreSQL (5432) - 数据库
-- ✅ Redis (6379) - 缓存
-- ✅ Kafka (19092) - 消息队列
-- ✅ MinIO (9000, 9001) - 对象存储
-- ✅ Qdrant (6333, 6334) - 向量数据库
+> 适用于：**快速体验、生产部署**
+>
+> 所有服务（包括 Go、Python）都运行在 Docker 容器中
 
-### 步骤 2：启动 Python AI 服务
+### 📦 前置要求
 
-**方法 A：使用启动脚本（推荐）**
+- Docker Desktop 或 Docker Engine
+- Docker Compose v2.0+
+
+### 🔧 步骤 1：配置 API Key
 
 ```bash
-# 在新终端窗口中执行
-cd /Users/liang/projectljx/ragljx
-./start_python.sh
+# 进入项目目录
+cd ragljx
+
+# 复制环境变量模板
+cp .env.example .env
+
+# 编辑 .env 文件，填入您的 API Key
 ```
 
-**方法 B：手动启动**
+编辑 `.env` 文件内容：
 
 ```bash
-cd /Users/liang/projectljx/ragljx/ragljx_py
+# 嵌入模型配置（用于文档向量化）
+EMBEDDING_API_KEY=your_embedding_api_key_here
+EMBEDDING_API_BASE=https://api.openai.com/v1
+EMBEDDING_MODEL=text-embedding-3-small
 
-# 创建虚拟环境（首次）
-python3 -m venv venv
-source venv/bin/activate
-
-# 安装依赖（首次）
-pip install -r requirements.txt
-
-# 设置环境变量
-export RAGLJX_DB_HOST=localhost
-export RAGLJX_DB_PORT=5432
-export RAGLJX_DB_DATABASE=ragljx
-export RAGLJX_DB_USERNAME=ragljx
-export RAGLJX_DB_PASSWORD=ragljx_password
-export RAGLJX_QDRANT_HOST=localhost
-export RAGLJX_QDRANT_PORT=6333
-export RAGLJX_MINIO_ENDPOINT=localhost:9000
-export RAGLJX_MINIO_ACCESS_KEY=minioadmin
-export RAGLJX_MINIO_SECRET_KEY=minioadmin
-export RAGLJX_GRPC_HOST=0.0.0.0
-export RAGLJX_GRPC_PORT=50051
-
-# AI 配置
-export EMBEDDING_API_KEY=sk-zk227c9ec189d0bb39972d22b03b30a619e692524568ce2c
-export EMBEDDING_API_BASE=https://api.zhizengzeng.com/v1
-export EMBEDDING_MODEL=text-embedding-3-small
-export CHAT_API_KEY=sk-7ed50a0e6d0a4fe4862d2f33e6ce878e
-export CHAT_API_BASE=https://api.deepseek.com/v1
-export CHAT_MODEL=deepseek-chat
-
-# 启动服务
-python main.py
+# 对话模型配置（用于智能问答）
+CHAT_API_KEY=your_chat_api_key_here
+CHAT_API_BASE=https://api.openai.com/v1
+CHAT_MODEL=gpt-4
 ```
 
-**预期输出**：
-```
-VectorService initialized with Qdrant at localhost:6333
-Using embedding model: text-embedding-3-small
-ChatService initialized with model: deepseek-chat
-RAG gRPC server started on 0.0.0.0:50051
-```
+> 💡 **提示**：API Key 配置详情请参阅 [API_KEY_配置指南.md](API_KEY_配置指南.md)
 
-### 步骤 3：启动 Go 后端服务
-
-**方法 A：使用启动脚本（推荐）**
+### 🚀 步骤 2：启动所有服务
 
 ```bash
-# 在新终端窗口中执行
-cd /Users/liang/projectljx/ragljx
-./start_go.sh
+# 启动所有容器服务
+docker-compose up -d
 ```
 
-**方法 B：手动启动**
+**启动的服务包括**：
+
+| 服务 | 端口 | 说明 |
+|------|------|------|
+| ragljx_go | 8080 | Go 后端 API 服务 |
+| ragljx_py | 50051 | Python AI 服务 |
+| postgres | 5432 | PostgreSQL 数据库 |
+| redis | 6379 | Redis 缓存 |
+| kafka | 19092 | Kafka 消息队列 |
+| minio | 9000, 9001 | MinIO 对象存储 |
+| qdrant | 6333, 6334 | Qdrant 向量数据库 |
+
+### ✅ 步骤 3：检查服务状态
 
 ```bash
-cd /Users/liang/projectljx/ragljx/ragljx_go
+# 查看所有服务状态
+docker-compose ps
 
-# 设置环境变量
-export RAGLJX_DB_HOST=localhost
-export RAGLJX_DB_PORT=5432
-export RAGLJX_DB_DATABASE=ragljx
-export RAGLJX_DB_USERNAME=ragljx
-export RAGLJX_DB_PASSWORD=ragljx_password
-export RAGLJX_REDIS_HOST=localhost
-export RAGLJX_REDIS_PORT=6379
-export RAGLJX_KAFKA_BROKERS=localhost:19092
-export RAGLJX_MINIO_ENDPOINT=localhost:9000
-export RAGLJX_MINIO_ACCESS_KEY=minioadmin
-export RAGLJX_MINIO_SECRET_KEY=minioadmin
-export RAGLJX_GRPC_ADDRESS=localhost:50051
-export RAGLJX_HTTP_PORT=8080
+# 查看服务日志
+docker-compose logs -f
 
-# 启动服务
-go run cmd/server/main.go
+# 查看特定服务日志
+docker-compose logs -f ragljx_go
+docker-compose logs -f ragljx_py
 ```
 
-**预期输出**：
+**预期输出**（所有服务状态为 `running`）：
+
 ```
-Server started on :8080
+NAME                STATUS              PORTS
+ragljx_go           running             0.0.0.0:8080->8080/tcp
+ragljx_py           running             0.0.0.0:50051->50051/tcp
+postgres            running             0.0.0.0:5432->5432/tcp
+redis               running             0.0.0.0:6379->6379/tcp
+kafka               running             0.0.0.0:19092->19092/tcp
+minio               running             0.0.0.0:9000-9001->9000-9001/tcp
+qdrant              running             0.0.0.0:6333-6334->6333-6334/tcp
 ```
 
-### 步骤 4：启动前端服务
+### 🖥 步骤 4：启动前端
 
 ```bash
-# 在新终端窗口中执行
-cd /Users/liang/projectljx/ragljx/ragljx_web
+# 进入前端目录
+cd ragljx_web
 
-# 安装依赖（首次）
+# 安装依赖（首次运行）
 npm install
 
 # 启动开发服务器
@@ -157,6 +116,7 @@ npm run dev
 ```
 
 **预期输出**：
+
 ```
 VITE v5.x.x  ready in xxx ms
 
@@ -164,158 +124,260 @@ VITE v5.x.x  ready in xxx ms
 ➜  Network: use --host to expose
 ```
 
-## 🌐 访问系统
+### 🎉 完成！
 
-### 前端界面
-- **URL**: http://localhost:5173
-- **默认管理员账号**:
-  - 用户名: `admin`
-  - 密码: `123456`
-
-### 后端 API
-- **URL**: http://localhost:8080
-- **API 文档**: http://localhost:8080/api/v1
-
-### 管理界面
-- **MinIO 控制台**: http://localhost:9001
-  - 用户名: `minioadmin`
-  - 密码: `minioadmin`
-- **Qdrant Dashboard**: http://localhost:6333/dashboard
-
-## 🧪 测试流程
-
-### 1. 登录系统
-1. 打开浏览器访问 http://localhost:5173
-2. 使用 `admin` / `123456` 登录
-
-### 2. 创建知识库
-1. 点击"知识库管理"
-2. 点击"创建知识库"
-3. 填写知识库名称和描述
-4. 点击"确定"
-
-### 3. 上传文档
-1. 进入刚创建的知识库
-2. 点击"上传文档"
-3. 选择文档文件（支持 TXT, MD, PDF, DOCX, XLSX, PPTX 等）
-4. 等待文档处理完成（会调用嵌入模型进行向量化）
-
-### 4. 开始对话
-1. 点击"对话"
-2. 选择知识库
-3. 输入问题
-4. 查看 AI 回答（会调用 DeepSeek 对话模型）
-
-## 🔍 故障排查
-
-### 基础设施服务未启动
-```bash
-# 查看服务状态
-docker-compose -f docker-compose.infra.yml ps
-
-# 查看日志
-docker-compose -f docker-compose.infra.yml logs [service_name]
-
-# 重启服务
-docker-compose -f docker-compose.infra.yml restart [service_name]
-```
-
-### Python 服务启动失败
-```bash
-# 检查依赖
-cd ragljx_py
-pip list
-
-# 检查配置
-python -c "from app.config import config; print(config.embedding_api_key)"
-
-# 查看详细错误
-python main.py
-```
-
-### Go 服务启动失败
-```bash
-# 检查 Go 版本
-go version
-
-# 检查依赖
-cd ragljx_go
-go mod tidy
-
-# 查看详细错误
-go run cmd/server/main.go
-```
-
-### 前端无法连接后端
-1. 检查后端是否在 8080 端口运行
-2. 检查浏览器控制台是否有 CORS 错误
-3. 检查 `ragljx_web/src/api/request.js` 中的 baseURL 配置
-
-### AI API 调用失败
-1. 检查 API Key 是否正确
-2. 检查 API Base URL 是否可访问
-3. 查看 Python 服务日志中的错误信息
-
-## 🛑 停止服务
-
-### 停止基础设施
-```bash
-docker-compose -f docker-compose.infra.yml down
-```
-
-### 停止 Python/Go/前端服务
-在对应的终端窗口按 `Ctrl+C`
-
-## 📊 端口占用情况
-
-| 服务 | 端口 | 说明 |
-|------|------|------|
-| 前端 | 5173 | Vue 开发服务器 |
-| Go 后端 | 8080 | HTTP API |
-| Python AI | 50051 | gRPC 服务 |
-| PostgreSQL | 5432 | 数据库 |
-| Redis | 6379 | 缓存 |
-| Kafka | 19092 | 消息队列 |
-| MinIO | 9000, 9001 | 对象存储 |
-| Qdrant | 6333, 6334 | 向量数据库 |
-
-## 🔐 默认账号信息
-
-### 系统管理员
-- 用户名: `admin`
-- 密码: `123456`
-- 邮箱: `admin@ragljx.com`
-
-### MinIO
-- Access Key: `minioadmin`
-- Secret Key: `minioadmin`
-
-### PostgreSQL
-- 用户名: `ragljx`
-- 密码: `ragljx_password`
-- 数据库: `ragljx`
-
-## 📝 AI 模型配置
-
-### 嵌入模型（文档向量化）
-- **API**: https://api.zhizengzeng.com/v1
-- **模型**: text-embedding-3-small
-- **用途**: 将文档转换为向量存储到 Qdrant
-
-### 对话模型（AI 对话）
-- **API**: https://api.deepseek.com/v1
-- **模型**: deepseek-chat (DeepSeek-V3.2-Exp)
-- **用途**: 生成 AI 回答
-
-## 🎯 下一步
-
-1. ✅ 基础设施已启动
-2. ⏳ 启动 Python AI 服务
-3. ⏳ 启动 Go 后端服务
-4. ⏳ 启动前端服务
-5. ⏳ 测试完整流程
+打开浏览器访问 **http://localhost:5173** 即可使用系统。
 
 ---
 
-**祝您使用愉快！** 🎉
+## 💻 方式二：本地开发启动
 
+> 适用于：**开发调试、代码修改**
+>
+> 基础设施运行在 Docker 中，Go 和 Python 服务在本地运行
+
+### 📦 前置要求
+
+- Docker Desktop 或 Docker Engine
+- Docker Compose v2.0+
+- Go 1.21+
+- Python 3.12+
+- Node.js 18+
+
+### 🔧 步骤 1：配置 API Key
+
+```bash
+# 进入项目目录
+cd ragljx
+
+# 复制环境变量模板
+cp .env.example .env
+
+# 编辑 .env 文件，填入您的 API Key
+```
+
+> 💡 **提示**：`.env` 文件会被 `start_python.sh` 脚本自动读取
+
+### 🐳 步骤 2：启动基础设施
+
+```bash
+# 启动基础设施容器
+docker-compose -f docker-compose.infra.yml up -d
+```
+
+**启动的服务包括**：
+
+| 服务 | 端口 | 说明 |
+|------|------|------|
+| postgres | 5432 | PostgreSQL 数据库 |
+| redis | 6379 | Redis 缓存 |
+| kafka | 19092 | Kafka 消息队列 |
+| minio | 9000, 9001 | MinIO 对象存储 |
+| qdrant | 6333, 6334 | Qdrant 向量数据库 |
+
+**检查服务状态**：
+
+```bash
+docker-compose -f docker-compose.infra.yml ps
+```
+
+### 🐍 步骤 3：启动 Python AI 服务
+
+**打开新的终端窗口**，执行：
+
+```bash
+# 进入项目根目录
+cd ragljx
+
+# 运行启动脚本
+./start_python.sh
+```
+
+**脚本会自动**：
+1. 读取 `.env` 文件中的 API Key 配置
+2. 创建 Python 虚拟环境（首次运行）
+3. 安装依赖包（首次运行）
+4. 启动 gRPC 服务
+
+**预期输出**：
+
+```
+VectorService initialized with Qdrant at localhost:6333
+Using embedding model: text-embedding-3-small
+ChatService initialized with model: deepseek-chat
+RAG gRPC server started on 0.0.0.0:50051
+```
+
+### ⚙️ 步骤 4：启动 Go 后端服务
+
+**打开新的终端窗口**，执行：
+
+```bash
+# 进入项目根目录
+cd ragljx
+
+# 运行启动脚本
+./start_go.sh
+```
+
+**脚本会自动**：
+1. 设置数据库、Redis、Kafka、MinIO、gRPC 连接配置
+2. 启动 Go HTTP 服务
+
+**预期输出**：
+
+```
+Server started on :8080
+```
+
+### 🖥 步骤 5：启动前端
+
+**打开新的终端窗口**，执行：
+
+```bash
+# 进入前端目录
+cd ragljx/ragljx_web
+
+# 安装依赖（首次运行）
+npm install
+
+# 启动开发服务器
+npm run dev
+```
+
+**预期输出**：
+
+```
+VITE v5.x.x  ready in xxx ms
+
+➜  Local:   http://localhost:5173/
+➜  Network: use --host to expose
+```
+
+### 🎉 完成！
+
+打开浏览器访问 **http://localhost:5173** 即可使用系统。
+
+---
+
+## 🌐 访问系统
+
+### 📍 服务地址
+
+| 服务 | 地址 | 说明 |
+|------|------|------|
+| 🖥 前端界面 | http://localhost:5173 | 用户操作界面 |
+| 📡 后端 API | http://localhost:8080 | RESTful API |
+| 📦 MinIO 控制台 | http://localhost:9001 | 文件存储管理 |
+| 🔍 Qdrant 面板 | http://localhost:6333/dashboard | 向量数据库管理 |
+
+### 🔑 默认账号
+
+**系统管理员**：
+```
+用户名: admin
+密码: 123456
+```
+
+**MinIO 控制台**：
+```
+Access Key: minioadmin
+Secret Key: minioadmin
+```
+
+> ⚠️ **安全提示**：首次登录后请立即修改默认密码！
+
+---
+
+## 🛑 停止服务
+
+### 方式一（Docker 全容器）
+
+```bash
+# 停止所有服务
+docker-compose down
+
+# 停止并删除数据（谨慎使用）
+docker-compose down -v
+```
+
+### 方式二（本地开发）
+
+```bash
+# 1. 在各终端窗口按 Ctrl+C 停止 Go、Python、前端服务
+
+# 2. 停止基础设施
+docker-compose -f docker-compose.infra.yml down
+```
+
+---
+
+## 🔍 故障排查
+
+### ❌ 服务无法启动
+
+**检查 Docker 服务状态**：
+```bash
+# 方式一
+docker-compose ps
+
+# 方式二
+docker-compose -f docker-compose.infra.yml ps
+```
+
+**查看服务日志**：
+```bash
+# 查看 Go 服务日志
+docker-compose logs ragljx_go
+
+# 查看 Python 服务日志
+docker-compose logs ragljx_py
+```
+
+### ❌ 文档处理失败
+
+1. 检查 Python 服务是否正常运行
+2. 检查 API Key 是否配置正确
+3. 查看 Python 服务日志：
+   ```bash
+   docker-compose logs -f ragljx_py
+   ```
+
+### ❌ 对话无响应
+
+1. 确认知识库中有已处理完成的文档
+2. 检查对话模型 API Key 是否有效
+3. 检查网络是否能访问 AI 服务
+
+### ❌ 前端无法连接后端
+
+1. 确认 Go 服务在 8080 端口运行
+2. 检查浏览器控制台是否有 CORS 错误
+3. 尝试清除浏览器缓存
+
+---
+
+## 📊 端口占用一览
+
+| 端口 | 服务 | 说明 |
+|------|------|------|
+| 5173 | Vue 前端 | 开发服务器 |
+| 8080 | Go 后端 | HTTP API |
+| 50051 | Python AI | gRPC 服务 |
+| 5432 | PostgreSQL | 数据库 |
+| 6379 | Redis | 缓存 |
+| 19092 | Kafka | 消息队列 |
+| 9000 | MinIO | 对象存储 API |
+| 9001 | MinIO | 管理控制台 |
+| 6333 | Qdrant | 向量数据库 API |
+| 6334 | Qdrant | 管理面板 |
+
+---
+
+<div align="center">
+
+**🎉 祝您使用愉快！**
+
+如有问题，请查阅 [README.md](README.md) 或提交 Issue
+
+</div>
